# go-for-it

./: .cursorrules  Dockerfile  Makefile  README.md  docker-compose.yml  nuxt.config.ts  package.json  tailwind.config.js
assets/css/: main.css
layouts/: default.vue
pages/: _careers.vue  _services.vue  _test.vue  about.vue  blog.vue  careers.vue  contact.vue  fuel.vue  index.vue  liquor.vue  privacy.vue  promotions.vue  services.vue  store.vue  terms.vue
pages/brands/: [brand].vue
public/: beer_data.json  robots.txt  seltzer_data.json  sitemap.xml  sparkling_and_sweet_data.json  tequila_data.json  test_image_jack.avif  wine_data.json
public/data/: premium_liquor_data.json  rum_data.json  snacks_data.json  sparkling_and_sweet_data.json  whisky_data.json
public/icons/: generate-favicon.html
scraper/: README.md  main.py  pyproject.toml  scraper.py
scraper/input/: beer-data.txt  brandy-and-cognac.txt  drinks-and-mixes-data.txt  gin-data.txt  liquor-data.txt  rum-data.txt  seltzer-data.txt  snacks-data.txt  sparkling-sweets-data.txt  tquila-data.txt  vodka-data.txt  whisky-data.txt  wine-data.txt
scraper/output/: brandy_and_cognac_data.json  drinks_and_mixes_data.json  gin_data.json  vodka_data.json
