[project]
name = "scraper"
version = "0.1.0"
description = "DoorDash store scraper for extracting product data"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "selenium>=4.35.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "webdriver-manager>=4.0.0",
    "pillow>=10.0.0",
]
